bootstrap installation is now working

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+/* Move down content because we have a fixed navbar that is 3.5rem tall */
+
