--- a/src/css/userlogin.css
+++ b/src/css/userlogin.css
@@ -7,7 +7,7 @@ body {
 #login .container #login-row #login-column #login-box {
     /*margin-top: 80px;*/
     max-width: 600px;
-    height: 320px;
+    height: auto; /*this needs to be auto to adapt the size to errors*/
     border: 1px solid #9C9C9C;
     /*background-color: #b9bbbe;*/
 }
@@ -15,5 +15,5 @@ body {
     padding: 20px;
 }
 #login .container #login-row #login-column #login-box #login-form #register-link {
-    margin-top: -85px;
+    /*margin-top: -85px; this isn't needed*/
 }
